1998-11-09  Yo Ric Dude  <ricdude@ix.netcom.com>

	* esd-server.h, esd.h, esdctl.c, esdlib.c, esdmgr.c, mix.c,
	players.c, proto.c, samples.c: initial support for setting stereo
	panning of streams and samples, just need to update mix.c to do
	the scaling...

Sat Nov  7 05:28:03 PST 1998 Manish Singh <yosh@gimp.org>

	* esddsp.c: Hmmph. The ES1370 driver blocks on open unless
	O_NONBLOCK is set explictly. So now we strcmp always, and
	set O_NONBLOCK on fallback only for the sound device.

	* esdlib.c: removed fsync's here too

1998-11-06  Yo Ric Dude  <ricdude@ix.netcom.com>

	* samples.c, players.c, proto.c: fixed rounding to multiple of 4
	algorithm, and removed fsync's as they don't do anything for a
	socket.  patches suggested by Miodrag Vallat.

1998-11-05  Yo Ric Dude  <ricdude@ix.netcom.com>

	* audio_aix.c: typo fixes courtest of Philippe Defert

1998-11-04  Yo Ric Dude  <ricdude@ix.netcom.com>

	* TODO, esd.h, esdctl.c, esdmgr.c, proto.c: It really should have
 	been esd_free_all_info(), and while we're at it, make it do
 	something potentially useful.
  	
	* esound.spec: set it up for autoconf to update the version
 	number, then lost the changes. thanks to Michael Sterrett.

1998-11-03  Christopher Blizzard  <blizzard@appliedtheory.com>

	* esdctl.c (main): Change call from esd_free_all_info() to
 	esd_free_esd_info() so that this will build.

1998-11-03  Yo Ric Dude  <ricdude@ix.netcom.com>

	* TODO, configure.in: update version number
	* Makefile.am, esd-server.h, esd.h, esdctl.c, proto.c, esdmgr.c: 
	add initial framework for remote management of server, filter out
	diagnostic/debugging information from binary if we don't want it.
	also inlcude esound.spec file in distribution.

Sat Oct 31 21:36:07 PST 1998 Manish Singh <yosh@gimp.org>

	* esddsp.c: don't try to open local sound device if ESPEAKER is set

1998-10-31  Yo Ric Dude  <ricdude@ix.netcom.com>

	* EsounD.html, EsounD.ps, Makefile.am: replaced EsounD.html with